# httpx-backoff

./: .gitlab-ci.yml  README.md  pyproject.toml
httpx_backoff/: _common.py  _typing.py
httpx_backoff/backoff_options/: __init__.py  constant.py  expo.py  fibo.py  jitter.py  runtime.py
httpx_backoff/clients/: base.py  on_exception.py  on_predicate.py
tests/: conftest.py  test_backoff_constant_option.py  test_backoff_expo_option.py  test_backoff_fibo_option.py  test_backoff_runtime_option.py  test_exception_constant_client.py  test_exception_expo_client.py  test_exception_fibo_client.py  test_exception_runtime_client.py  test_predicate_constant_client.py  test_predicate_expo_client.py  test_predicate_fibo_client.py  test_predicate_runtime_client.py
